# fabops-copilot

./: .env.example  .gitignore  Dockerfile.nightly  README.md  REPORT.md  pyproject.toml  requirements-dev.txt  requirements-nightly.txt  requirements-runtime.txt
.github/workflows/: eval-ci.yml
docs/superpowers/: handoff-day5.md
evals/: gold_set.json  rubric.md
evals/results/: gold_run.json  judge_cache.json  p90_coverage.json
fabops/: config.py
fabops/agent/: graph.py  llm.py  nodes.py  planner_prompt.txt  state.py
fabops/data/: carparts.py  dynamo.py  synthetic.py
fabops/handlers/: monitor.py  nightly_bake.py  runtime.py
fabops/observability/: audit.py  langfuse_shim.py  request_id.py
fabops/tools/: _croston_numpy.py  _stockout.py  base.py  compute_reorder_policy.py  forecast_demand.py  get_inventory.py  get_macro_signal.py  get_supplier_leadtime.py  search_disclosures.py  simulate_disruption.py
frontend/: app.js  catalog.json  config.js  index.html  inventory.json  monitor.html  styles.css
infra/: cloudwatch_dashboard.json  create_tables.py
scripts/: bake_catalog.py  bake_inventory.py  compute_p90_coverage.py  deploy_runtime.sh  dspy_compile_planner.py  generate_adversarial.py  ingest_edgar.py  inject_gold_drift.py  mcp_server.py  populate_synthetic.py  prebake_edgar_chunks.py  regenerate_gold_set.py  requirements-ingest.txt  run_judge.py  smoke_audit.py  stress_cold_start.py
tests/: test_mcp_compliance.py
tests/test_agent/: test_graph.py  test_nodes.py  test_state.py
tests/test_data/: test_audit.py  test_carparts.py  test_synthetic.py
(+11 files in other folders)
